# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.

  07 Oct 2004; Jason Stubbs <jstubbs@gentoo.org> portage.py: Updated
  portdbapi.getfetchsizes function for new digestParseFile return values.

  05 Oct 2004; Jason Stubbs <jstubbs@gentoo.org> quickpkg: Fixed bug whereby
  creating a package from within /var/db/pkg/cat and specifying pkg would
  create a broken package.

  05 Oct 2004; Jason Stubbs <jstubbs@gentoo.org> emerge: Modified output for
  slotted installations. #26139

  05 Oct 2004; Jason Stubbs <jstubbs@gentoo.org> emerge: Refactored argv
  processing a little bit and made "emerge rsync" to emerge rsync with notice
  and "emerge --rsync" to emerge --sync with notice.

  05 Oct 2004; Nicholas Jones <carpaski@gentoo.org> portage_util.py: grabfile
  now handles a compat_level option for comment-based compatability changes --
  This feautre is for migration only and is thus transitory.

  05 Oct 2004; Nicholas Jones <carpaski@gentoo.org> portage_exception: Added
  a DigestException which is a SignatureException.

  05 Oct 2004; Nicholas Jones <carpaski@gentoo.org> perform_checksum.py: Added
  a perform_all() and verify_all() functions that handle the new dict of hashes
  that digestParse returns -- It creates hashes for all the listed/known
  formats or verifies them all returning a tuple of ok,reason.

  05 Oct 2004; Nicholas Jones <carpaski@gentoo.org> portage.py: Cleared up
  a few system-package import-alls (stat,commands) -- If it breaks something,
  they can fix their code -- They are standard modules. Removed the import
  for select, as it appears nowhere in usage. Changed the portage_data import.